[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
itertools = "0.12.0"
tempfile = "3.8.1"
regex = "1.10.2"
log = "0.4.20"
num = "0.4.1"
#serde_json = "1.0"
#petgraph = "0.6.2"
pathfinding = "4.1.1"
rustc-hash = "1.1.0"
rayon = "1.6.1"
#quickcheck = "1.0.3"
#quickcheck_macros = "1.0.0"
array2d = "0.3.1"
clap = { version = "4.4.11", features = ["derive", "env"] }
recap = "0.1.2"
gomez = "0.5.0"
plotters = { version = "0.3.5", features = [] }

[profile.release]
debug = true
strip = false
